<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padTBLR"
    android:paddingLeft="@dimen/padTBLR"
    android:paddingRight="@dimen/padTBLR"
    android:paddingTop="@dimen/padTBLR"
    android:background="@color/pink"
    tools:context=".ArchitectureSemesters">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ss"
        android:textColor="@color/brown"
        android:textSize="@dimen/txtsz01"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/archiTH"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/archiSH"
                android:layout_marginBottom="@dimen/archiMargin"
                android:layout_marginTop="@dimen/archiMargin">

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:layout_marginRight="@dimen/archiMargin"
                    android:background="@color/lb"
                    android:onClick="ArchiOneOne"
                    android:text="@string/one1" />

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:background="@color/llb"
                    android:onClick="ArchiOneTwo"
                    android:text="@string/one2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/archiSH"
                android:layout_marginBottom="@dimen/archiMargin"
                android:layout_marginTop="@dimen/archiMargin">

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:layout_marginRight="@dimen/archiMargin"
                    android:background="@color/llb"
                    android:onClick="ArchiTwoOne"
                    android:text="@string/two1" />

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:background="@color/lb"
                    android:onClick="ArchiTwoTwo"
                    android:text="@string/two2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/archiSH"
                android:layout_marginBottom="@dimen/archiMargin"
                android:layout_marginTop="@dimen/archiMargin">

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:layout_marginRight="@dimen/archiMargin"
                    android:background="@color/lb"
                    android:onClick="ArchiThreeOne"
                    android:text="@string/three1" />

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:background="@color/llb"
                    android:onClick="ArchiThreeTwo"
                    android:text="@string/three2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/archiSH"
                android:layout_marginBottom="@dimen/archiMargin"
                android:layout_marginTop="@dimen/archiMargin">

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:layout_marginRight="@dimen/archiMargin"
                    android:background="@color/llb"
                    android:onClick="ArchiFourOne"
                    android:text="@string/four1" />

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:background="@color/lb"
                    android:onClick="ArchiFourTwo"
                    android:text="@string/four2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/archiSH"
                android:layout_marginBottom="@dimen/archiMargin"
                android:layout_marginTop="@dimen/archiMargin">

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:layout_marginRight="@dimen/archiMargin"
                    android:background="@color/lb"
                    android:onClick="ArchiFiveOne"
                    android:text="@string/five1" />

                <Button
                    android:layout_width="@dimen/archiW"
                    android:layout_height="@dimen/archiH"
                    android:background="@color/llb"
                    android:onClick="ArchiFiveTwo"
                    android:text="@string/five2" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
