<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightYellow"
    tools:context="com.example.siam_ansary.austgpacalculator00.ArchiFiveTwo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/enterARC52ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/er"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/txtsz01" />

                <EditText
                    android:id="@+id/arc52IDread"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/ssn"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/txtsz01" />

                <EditText
                    android:id="@+id/arc52Session"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <TextView
                android:id="@+id/enterMarks52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/enterARC52ID"
                android:layout_marginTop="@dimen/ten"
                android:text="@string/em"
                android:textColor="@color/brown"
                android:textSize="@dimen/txtsz01" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/arc5259"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/enterMarks52"
                    android:layout_marginTop="@dimen/ten"
                    android:text="ARC 5259:"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txtsz01" />

                <EditText
                    android:id="@+id/arc5259read"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/arc5241"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="ARC 5241:"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txtsz01" />

                <EditText
                    android:id="@+id/arc5241read"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/arc5257"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="ARC 5257:"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txtsz01" />

                <EditText
                    android:id="@+id/arc5257read"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/arc5204"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:text="ARC 5204:"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txtsz01" />

                <EditText
                    android:id="@+id/arc5204read"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>





        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonGPAarch52"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/silver"
        android:onClick="archi52"
        android:text="@string/gpa"
        android:textSize="@dimen/txtsz01"
        android:textStyle="bold" />

</RelativeLayout>
