<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/padTBLR"
    android:paddingLeft="@dimen/padTBLR"
    android:paddingRight="@dimen/padTBLR"
    android:paddingTop="@dimen/padTBLR"
    tools:context="com.example.siam_ansary.austgpacalculator00.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="AUST GPA CALCULATOR"
            android:textColor="@color/silver"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CSE 2200"
            android:textColor="@color/silver"
            android:textSize="@dimen/txtsz01"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Software Development Lab III"
            android:textColor="@color/silver"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/selectDept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/txtBack01"
                android:onClick="selectDept"
                android:text="@string/Select_Dept"
                android:textColor="@color/txt01"
                android:textSize="@dimen/txtsz01"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:background="@color/txtBack01"
                    android:onClick="help"
                    android:text="@string/help"
                    android:textColor="@color/txt01"
                    android:textSize="@dimen/txtsz01"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:background="@color/txtBack01"
                    android:onClick="about"
                    android:text="@string/about"
                    android:textColor="@color/txt01"
                    android:textSize="@dimen/txtsz01"
                    android:textStyle="normal" />

            </LinearLayout>

            <Button

                android:id="@+id/showSaved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@color/txtBack01"
                android:onClick="showRecord"
                android:text="Records"
                android:textColor="@color/txt01"
                android:textSize="@dimen/txtsz01"
                android:textStyle="normal" />

            <Button
                android:id="@+id/selectCalculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@color/txtBack01"
                android:onClick="selectCalc"
                android:text="Calculator"
                android:textColor="@color/txt01"
                android:textSize="@dimen/txtsz01"
                android:textStyle="normal" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
